# CS2UID

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  question.md  requirements.txt
CS2UID/: __init__.py  version.py
CS2UID/cogo_help/: Help.json  __init__.py  get_help.py
CS2UID/csgo_download/: __init__.py  item.json  utils.py
CS2UID/csgo_help/: Help.json  __init__.py  get_help.py  help.json
CS2UID/csgo_info/: __init__.py  csgo_5e.py  csgo_event.py  csgo_goods.py  csgo_info.py  csgo_match.py  csgo_matchdetail.py  csgo_path.py  csgo_search.py  csgohome_info.py  utils.py
CS2UID/csgo_info/texture2d/base/: base_bg.psd
CS2UID/csgo_items/: __init__.py  message.py  utils.py
CS2UID/csgo_status/: __init__.py
CS2UID/csgo_user/: __init__.py  add_ck.py  login.py
CS2UID/utils/: cache.py  csgo_api.py  csgo_config.py  csgo_font.py  error_reply.py  image.py  platform.py  remind.py
CS2UID/utils/api/: api.py  login.py  login_5e.py  models.py  models_5e.py  request.py  safe_log.py
CS2UID/utils/api/perf/: __init__.py  cache.py  coalescer.py  pool.py  token_cache.py
CS2UID/utils/database/: migrations.sql  models.py
test/img/: sq.psd
tests/: conftest.py  test_api_endpoints.py  test_cache.py  test_csgo_config.py  test_csgo_info_utils.py  test_error_reply.py  test_parse_s_value.py  test_perf.py  test_platform.py  test_safe_log.py
